# aa-discord-onboarding

./: .gitignore  AUTO_KICK_FEATURE.md  CHANGELOG.md  LICENSE  MANIFEST.in  PUBLISH.md  README.md  pyproject.toml  pytest.ini  setup.py  test_settings.py  test_urls.py  verify_package.py
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
discord_onboarding/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  bot_tasks.py  models.py  signals.py  tasks.py  urls.py  views.py
discord_onboarding/cogs/: __init__.py  onboarding.py
discord_onboarding/management/commands/: cleanup_onboarding_tokens.py
discord_onboarding/migrations/: 0001_initial.py  0002_add_autokickschedule.py
discord_onboarding/templates/discord_onboarding/: auto_register.html  base.html  error.html  index.html  success.html
discord_onboarding/tests/: __init__.py  factories.py  test_cogs.py  test_models.py  test_tasks.py  test_views.py
